Fixed font sizes. Changed colors to more contrast colors in movies by length. Did some more styling to search function

--- a/src/routes/RouteMoviesBySearchString/StyledRouteMoviesBySearchString.css
+++ b/src/routes/RouteMoviesBySearchString/StyledRouteMoviesBySearchString.css
@@ -1,8 +1,6 @@
-.RouteMoviesProducedInLanguage {
-
+.RouteMoviesBySearchString {
     min-width: fit-content;
-    width: 60em;
+    width: 50em;
     margin-left: auto;
     margin-right: auto;
-
 }
